* Making Log4J configuration fully asynchronous to improve performance
* Adding system setting for HTTP session timeout
* Adding module definition to let modules add 'utilities' to the Mango Javascript context
* Remove static 'instance' member of Dao classes replace with lazy loading getInstance() class so Mango Javascript calls don't change
* Check before NPE in CSV message converters

*Version 3.4.5*
* Content Security Policy (CSP) is now disabled by default and the configuration options have changed, please review the new setting names and update your env.properties file if you want to continue using CSP
* Fix DateTimeZone default if user didn't specify one and is in certain locales
* Fix bug with i18n translations from modules not being loaded in certain Log4j configurations
* REST security enhancements
* Legacy UI security enhancements
* Fix saving multiple new event detectors on edit point page
* Improve StartsAndRuntimeListWrapper documentation for Mango JavaScript
* Improve bulk permissions editing accuracy for data points
* Fix database upgrade 21 to not fail when deleting a duplicate user that has foreign key entries in linked tables.  IMPORTANT: if you have duplicate users with the same username the user created most recently will be deleted.
* Improve performance of the overrides system

*Version 3.4.4*
* More HTML escapes
* Fixed insidious typo released in 3.4.3

*Version 3.4.3*
* Changed i18n modules page links to the appropriate modules page
* Fix bug in ON_CHANGE_INTERVAL logging, prevent errant logging tasks at point termination
* Add configuration for CSP (Content Security Policy) to env.properties
* Fix to use lower case username when interacting with the user cache
* Escape HTML in various places on legacy UI to protect against script injection
* Implement configurable rate limiting for the REST API and rate limit authentication attempts
* Update xstyle - Fixes "Uncaught ReferenceError: normal is not defined" in legacy UI

*Version 3.4.2*